--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <h1>Selamat Datang!</h1>
-        <p>Ini adalah halaman web sederhana.</p>
+        <p>Ini adalah halaman web Joyo</p>
     </div>
 </body>
 
